package com.gr.im.common.exception;

/**
 * @author WSS
 * @descripton
 * @date 2020-04-08 11:20
 */
public class InvalidFrameException extends Exception{
    public InvalidFrameException(String s) {
        super(s);
    }
}
